# Copyright 2024 Guowei LING
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//bazel:yacl.bzl", "AES_COPT_FLAGS", "yacl_cc_test")

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "upsi",
    srcs = [
            "main.cc",
            "upsi.h",
            "upsi.cc",
            "aPSI.h",
            "aPSI.cc"
            ],
    deps = [
        "//yacl/link",
        "//examples/upsi/rr22/okvs:baxos",
        "//examples/upsi/rr22:rr22",
        "//examples/upsi/psu:psu",
        "//examples/upsi/ecdhpsi:ecdh_psi",
        "//yacl/base:int128",
        "//yacl/crypto/hash:blake3",
        "//yacl/utils:parallel",
        "//yacl/crypto/hash:hash_utils",
        "@local_apsi//:apsi",  
        "@seal//:seal", 
        "@kuku//:kuku"
    ],
    copts = ["-I/usr/local/include/APSI-0.11",
             "-I/usr/local/include/SEAL-4.1",
             "-I/usr/local/include/Kuku-2.1",
             "-O3",
             "-maes",
             "-mpclmul"],
    linkopts = ["-L/usr/local/lib", "-lapsi-0.11","-ljsoncpp","-llog4cplus","-lzmq"],
)






