# Copyright 2024 Guowei LING
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//bazel:yacl.bzl", "AES_COPT_FLAGS", "yacl_cc_test")

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "upsi",
    srcs = [
        "aPSI.cc",
        "aPSI.h",
        "main.cc",
        "upsi.cc",
        "upsi.h",
        "yacl_link_channel.h",
    ],
    copts = [
        "-O3",
        "-maes",
        "-mpclmul",
    ],
    deps = [
        "//examples/upsi/ecdhpsi:ecdh_psi",
        "//examples/upsi/psu",
        "//examples/upsi/rr22",
        "//examples/upsi/rr22/okvs:baxos",
        "//yacl/base:int128",
        "//yacl/crypto/hash:blake3",
        "//yacl/crypto/hash:hash_utils",
        "//yacl/link",
        "//yacl/utils:parallel",
        "@local_apsi//:apsi",
    ],
)
