# Copyright 2024 Guowei LING.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
load("//bazel:yacl.bzl", "AES_COPT_FLAGS", "yacl_cc_library")

package(default_visibility = ["//visibility:public"])

IBLT_PSU_COPTS = [
    "-O3",
    "-std=c++20",
    "-fcoroutines",
    "-fopenmp",
    "-Wall",
    "-Wextra",
    "-march=native",
    "-ftree-vectorize",
    "-maes",
    "-mpclmul",
    "-msse2",
    "-msse3",
    "-msse4.1",
    "-mavx2",
    "-Iexamples/upsi/psu/iblt_based_psu",
]

cc_library(
    name = "iblt_psu_impl",
    srcs = [
        "iblt_based_psu/iblt_h5.cc",
        "iblt_based_psu/psu.cc",
        "iblt_based_psu/volePSI/RsOprf.cpp",
        "iblt_based_psu/volePSI/SimpleIndex.cpp",
    ],
    hdrs = [
        "iblt_based_psu/ankerl/unordered_dense.h",
        "iblt_based_psu/iblt_h5.hpp",
        "iblt_based_psu/psu.h",
        "iblt_based_psu/unordered_dense_compat.h",
        "iblt_based_psu/volePSI/Defines.h",
        "iblt_based_psu/volePSI/Paxos.h",
        "iblt_based_psu/volePSI/PaxosImpl.h",
        "iblt_based_psu/volePSI/PxUtil.h",
        "iblt_based_psu/volePSI/RsOprf.h",
        "iblt_based_psu/volePSI/SimpleIndex.h",
        "psu.h",
    ],
    copts = AES_COPT_FLAGS + IBLT_PSU_COPTS,
    linkopts = [
        "-fopenmp",
        "-lssl",
        "-lcrypto",
        "-ldl",
        "-lpthread",
    ],
    deps = [
        "@local_volepsi//:headers",
        "@local_volepsi//:support_libs",
    ],
)

yacl_cc_library(
    name = "krtw19_psu_lib",
    srcs = [
        "krtw19_psu.cc",
    ],
    hdrs = [
        "krtw19_psu.h",
    ],
    copts = [
        "-maes",
        "-mpclmul",
    ],
    deps = [
        "//yacl/base:exception",
        "//yacl/base:int128",
        "//yacl/crypto/hash:hash_utils",
        "//yacl/crypto/rand",
        "//yacl/kernel/algorithms:base_ot",
        "//yacl/kernel/algorithms:kkrt_ote",
        "//yacl/kernel/algorithms:softspoken_ote",
        "//yacl/link",
        "//yacl/math/f2k",
        "@com_google_absl//absl/types:span",
    ],
)

yacl_cc_library(
    name = "psu_api",
    hdrs = [
        "psu.h",
    ],
    deps = [
        "//yacl:secparam",
        "//yacl/base:int128",
        "//yacl/link",
    ],
)

yacl_cc_library(
    name = "psu_iblt_backend",
    srcs = [
        "iblt_psu.cc",
    ],
    copts = AES_COPT_FLAGS + [
        "-std=c++20",
        "-fcoroutines",
        "-msse2",
        "-msse3",
        "-msse4.1",
        "-mavx2",
    ],
    deps = [
        ":psu_api",
        ":iblt_psu_impl",
        "//yacl/base:exception",
        "//yacl/utils:serialize",
    ],
)

yacl_cc_library(
    name = "psu_krtw_backend",
    srcs = [
        "krtw_psu_adapter.cc",
    ],
    deps = [
        ":krtw19_psu_lib",
        ":psu_api",
        "//yacl/base:exception",
        "//yacl/utils:serialize",
    ],
)

yacl_cc_library(
    name = "psu",
    srcs = [
        "psu.cc",
    ],
    defines = [
        "UPSI_PSU_ENABLE_KRTW",
    ],
    deps = [
        ":psu_api",
        "//yacl/base:exception",
        ":psu_krtw_backend",
    ],
)

yacl_cc_library(
    name = "psu_iblt",
    srcs = [
        "psu.cc",
    ],
    defines = [
        "UPSI_PSU_ENABLE_IBLT",
    ],
    deps = [
        ":psu_api",
        ":psu_iblt_backend",
        "//yacl/base:exception",
    ],
)

cc_test(
    name = "iblt_psu_smoke_test",
    size = "small",
    srcs = [
        "iblt_psu_smoke_test.cc",
    ],
    linkopts = [
        "-no-pie",
    ],
    deps = [
        ":psu_iblt",
        "//yacl/base:int128",
        "//yacl/link:test_util",
    ],
)
