# Copyright 2024 Guowei Ling.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//bazel:yacl.bzl", "yacl_cc_library")

package(default_visibility = ["//visibility:public"])

yacl_cc_library(
    name = "rr22",
    srcs = [
        "rr22.h",
        "rr22.cc",
    ],
    hdrs = ["rr22.h"],
    deps = [
        "//examples/upsi/rr22/okvs:galois128",
        "//examples/upsi/rr22/okvs:baxos",
        "//yacl/kernel/algorithms:silent_vole",
        "//yacl/link:test_util"
    ],
    copts = ["-maes", "-mpclmul"],
)